# manaforge

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/app/: config.py  main.py
backend/app/jobs/: store.py
backend/app/routers/: assets.py  generate.py  jobs.py  models.py
backend/app/services/: dalle.py  elevenlabs.py  musicgen.py  openrouter.py  pocketbase.py  spritesheet.py
backend/app/utils/: errors.py
backend/tests/: conftest.py  test_errors.py  test_generate.py  test_musicgen.py  test_resize.py
frontend/: .prettierrc.json  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: index.css
frontend/src/components/: AssetCard.test.ts  AssetCard.vue  GenerationCard.test.ts  GenerationCard.vue
frontend/src/components/ui/badge/: Badge.vue  index.ts
frontend/src/components/ui/button/: Button.vue  index.ts
frontend/src/lib/: api.ts  pb.ts  sse.ts  types.ts  utils.test.ts
frontend/src/router/: index.ts
frontend/src/stores/: assets.ts  generation.ts
frontend/src/views/: ArchiveView.vue  GenerateView.test.ts  GenerateView.vue
pocketbase/: Dockerfile  entrypoint.sh
pocketbase/pb_migrations/: 1772825052_created_assets.js  1772825324_updated_assets.js  1772825334_updated_assets.js  1782917525_updated_assets.js  1_init.js
scripts/: bump-version.sh
(+9 files in other folders)
